fix: add maven opens for alipay sandbox startup